--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,9 +3,97 @@ html, body, #main, #Workspace {
   height: 100%;
   margin: 0;
   padding: 0;
+  font-family: Roboto;
+  box-sizing: border-box;
 }
 
 #Workspace {
   display: flex;
   flex-direction: row;
+}
+
+header {
+  flex: 1 100%;
+  padding: 1em 1.5em;
+  background-color: #4271ae;
+  color: #ffffff;
+}
+
+header h1 {
+  margin: 0;
+}
+
+#Index {
+  height: 100%;
+}
+
+.error {
+  color: #c82829;
+}
+
+button {
+  font-family: inherit;
+  border: none;
+  font-size: 16px;
+  padding: 0.75em;
+  color: #ffffff;
+  /*text-transform: uppercase;*/
+  outline: none;
+  cursor: pointer;
+}
+
+.buttons > button {
+  background-color: #8959a8;
+  width: 100%;
+}
+
+.buttons > button:hover,
+.buttons > button:focus {
+  background-color: #b294bb;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
+  width: 400px;
+  margin: auto;
+}
+
+.buttons .or {
+  font-size: 16px;
+  margin: 1em 0;
+  /*text-transform: uppercase;*/
+}
+
+input {
+  font-family: inherit;
+  flex-grow: 3;
+  border: 2px solid #000;
+  font-size: 16px;
+  padding: 0.75em;
+  border-right: none;
+  outline: none;
+}
+
+input:hover,
+input:focus {
+  border-color: #999999;
+}
+
+input + button {
+  background-color: #4271ae;
+  flex-grow: 1;
+}
+
+input + button:hover,
+input + button:focus {
+  background-color: #81a2be;
+}
+
+.joinSection {
+  width: 100%;
+  display: flex;
 }
